--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
       - run: pip install -r requirements.txt
       - run: mkdocs build
               
-     # - uses: JamesIves/github-pages-deploy-action@3.7.1
-      #  with:
-       #   BRANCH: gh-pages
-        #  FOLDER: site
+      - uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          BRANCH: gh-pages
+          FOLDER: site
